--- a/src/assets/layout/sass/_mixins.scss
+++ b/src/assets/layout/sass/_mixins.scss
@@ -1,3 +1,5 @@
+@use "@sass-collective/strip-unit";
+
 @mixin icon-override($icon) {
   &:before {
     content: $icon;
@@ -43,7 +45,7 @@
 }
 
 @function strip-unit($value) {
-  @return $value / ($value * 0 + 1);
+  @return strip-unit.strip($value);
 }
 
 @mixin fluid-type($min-vw, $max-vw, $min-font-size, $max-font-size) {
